--- a/emacs/.emacs.d/90-personal.org
+++ b/emacs/.emacs.d/90-personal.org
@@ -217,10 +217,13 @@ three [[https://en.wikipedia.org/wiki/Bookmarklet][bookmarklets]]:
 
 In [[https://www.mozilla.org/en-US/firefox/new/][Firefox]], to show bookmarklets to the left of the menu ([[https://en.wikipedia.org/wiki/Hamburger_button][hamburger]]):
 
-1. Right click toolbar and show bookmarks toolbar
-2. Click the menu, Customize and move bookmarks toolbar items to
-   toolbar
-3. Close customize, right click toolbar and hide bookmarks toolbar
+1. Click the menu, Customize
+2. In the footer, click Toolbars and show the bookmarks toolbar
+3. Move the bookmarks toolbar items placeholder to the toolbar
+4. In the footer, click Toolbars and hide the bookmarks toolbar
+
+Bookmarklets placed into the Bookmarks Toolbar group are shown to the
+left of the menu.
 
 Configure org capture templates.
 
