Add setup tags.

--- a/README.org
+++ b/README.org
@@ -8,8 +8,8 @@ is the result of [[info:org#Extracting source code][tangling]].
 
 * For the masochist
 You want to use this? Take a look at [[file:dotfiles.org::*Identity][Identity]] and [[file:dotfiles.org::*Well known directories][Well known
-directories]]. Tangle the file and re-login. Then, take a look at
-[[file:emacs/.emacs.d/90-personal.org][personal.org]].
+directories]]. Tangle the file and re-login. Then, take a look at all
+headings tagged =setup= and [[file:emacs/.emacs.d/90-personal.org][personal.org]].
 
 * Getting started
 To get started, run:
