--- a/README.org
+++ b/README.org
@@ -43,7 +43,9 @@ Git is mandatory, everything else is optional.
   - [[https://hunspell.github.io/][Hunspell]]
   - [[https://x.org/][xprop]] (GTK theme variant)
   - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
-- X window manager: [[https://x.org/][xrandr]]
+- X window manager:
+  - [[https://github.com/Koekelas/exwm-gdm][exwm-gdm]]
+  - [[https://x.org/][xrandr]]
 - Terminal emulator: [[https://cmake.org/][CMake]], [[https://www.gnu.org/software/libtool/][libtool]] and [[https://github.com/neovim/libvterm][libvterm]]
 - E-mail client: [[https://www.djcbsoftware.nl/code/mu/][mu]] and [[http://isync.sourceforge.net/][isync]]
 - Address book: [[https://github.com/pimutils/vdirsyncer][vdirsyncer]]
@@ -97,6 +99,7 @@ To install dependencies on [[https://www.archlinux.org/][Arch Linux]], run:
 
   ## X window manager
   pacman -S xorg-xrandr
+  # Install exwm-gdm from source
 
   ## Terminal emulator
   pacman -S cmake libtool libvterm
